[package]
name = "network_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.8" 
pnet = "0.27" 
notify-rust="4.0"
nix = { version = "0.26", features = ["user"] }
zbus = "3.14.1"
druid = "*"
druid-shell = "*"
bytes = "*"
[build-dependencies]
pkg-config = "*"

