[package]
name = "new_cloner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "*"
druid-shell = "*"
bytes = "*"
chrono = "*"
pnet = "*"
pcap  = "0.8"
notify-rust = "*"
terminal = "*"
[build-dependencies]
pkg-config = "*"
